fix answers' spacing

--- a/styles.css
+++ b/styles.css
@@ -228,7 +228,6 @@ h2 {
 
 .question p, .question ul, .question li {
     font-weight: 400;
-    padding-left: 2rem;
     display: none;
 }
 
